# bound-class

./: .flake8  .pre-commit-config.yaml  README.md  README.rst  SECURITY.md  pyproject.toml  setup.py  tox.ini
.github/: dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cron-tests.yml  ci-tests.yml  codeql-analysis.yml  open_actions.yml
docs/: conf.py  contributing.rst  docs.rst  getting_started.rst  index.rst  install.rst  testing.rst  tutorials.rst  user_guide.rst
docs/libs/core/: base.rst  descriptors.rst  index.rst
docs/libs/io/: index.rst
docs/src/: base.rst  descriptors.rst
docs/whatsnew/: 0.1.rst  index.rst
libs/core/: pyproject.toml
libs/core/src/bound_class/core/: __init__.py  base.py  conftest.py  setup_package.py
libs/core/src/bound_class/core/accessors/: __init__.py  core.py  descriptor.py  register.py
libs/core/src/bound_class/core/descriptors/: __init__.py  base.py  bound.py  instance.py  register.py
libs/io/: README.rst  pyproject.toml
libs/io/src/bound_class/io/: __init__.py  accessor.py  descriptors.py
libs/io/src/bound_class/io/registry/: __init__.py  base.py  common.py  core.py  identify.py  input.py  output.py
src/bound_class/: __init__.py  base.py  base.pyi  common.py  setup_package.py
src/bound_class/accessors/: __init__.py  core.py  descriptor.py  register.py
src/bound_class/core/: __init__.py  base.py  common.py  conftest.py  setup_package.py
src/bound_class/core/accessors/: __init__.py  core.py  descriptor.py  register.py
src/bound_class/core/descriptors/: __init__.py  base.py  bound.py  instance.py  register.py
src/bound_class/descriptors/: __init__.py  base.py  bound.py  instance.py  oninstance.py  onlyinstance.py  register.py
src/bound_class/descriptors/tests/: test_base.py  test_bound.py  test_instance.py  test_oninstance.py  test_onlyinstance.py  test_register.py
src/bound_class/tests/: test_base.py  test_common.py
tests/: tox.ini
tests/bound_class/core/: test_base.py
tests/bound_class/core/descriptors/: test_base.py  test_instance.py  test_register.py
tests/core/: test_base.py
tests/core/descriptors/: test_base.py  test_bound.py  test_instance.py  test_register.py
